menambahkan product cart

--- a/index.html
+++ b/index.html
@@ -51,6 +51,47 @@
           <p>Book Table</p>
         </div>
       </section>
+
+      <section id="product-page">
+        <div class="product-title-container">
+          <h1>Our new exclusive collections</h1>
+          <p>
+            Elevate your interior with our curated selection of premium funiture
+            and accessories
+          </p>
+        </div>
+
+        <div class="category-container">
+          <button class="rounded-button">Daning</button>
+          <button class="rounded-button">Chair</button>
+          <button class="rounded-button">Bed</button>
+          <button class="rounded-button">Kitchen</button>
+          <button class="rounded-button">Shelves</button>
+        </div>
+        <div class="product-container">
+          <div class="product-card">
+            <div class="image-container">
+              <img src="images/chair.jpg" alt="chair" />
+              <button>Save</button>
+            </div>
+            <p>Chair</p>
+          </div>
+          <div class="product-card">
+            <div class="image-container">
+              <img src="images/design-interior.jpg" alt="second-image" />
+              <button>Save</button>
+            </div>
+            <p>Cupboard</p>
+          </div>
+          <div class="product-card">
+            <div class="image-container">
+              <img src="images/design-interior-asset.jpg" alt="third-image" />
+              <button>Save</button>
+            </div>
+            <p>Kitchen</p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
