--- a/index.html
+++ b/index.html
@@ -92,6 +92,36 @@
           </div>
         </div>
       </section>
+
+      <section id="product-gallery">
+        <h2>Inspiring interiors crafted with passion</h2>
+        <div class="product-image-container">
+          <div class="product-image-column">
+            <div class="img-container">
+              <img
+                src="https://images.unsplash.com/photo-1585128792020-803d29415281?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="image-left-1"
+              />
+              <p>tes 1</p>
+            </div>
+
+            <div class="img-container">
+              <img
+                src="https://images.unsplash.com/photo-1600210491369-e753d80a41f3?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                alt="image-right-2"
+              />
+              <p>tes2</p>
+            </div>
+          </div>
+          <div class="product-main-image img-container">
+            <img
+              src="https://images.unsplash.com/photo-1502005229762-cf1b2da7c5d6?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="image-right-3"
+            />
+            <p>tes2</p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
