menambahkan product description

--- a/index.html
+++ b/index.html
@@ -122,6 +122,16 @@
           </div>
         </div>
       </section>
+
+      <section id="promotion-page">
+        <img src="https://images.unsplash.com/photo-1586023492125-27b2c045efd7?q=80&w=1916&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="product-image">
+
+        <div class="promotion-description">
+          <h2>New Experience is going to unclock</h2>
+          <p>Indulge in comfort and style with our range of plush furniture and cozy accents</p>
+          <button class="btn-shop-now">Shop Now</button>
+        </div>
+      </section>
     </main>
   </body>
 </html>
