menambahkan animasi pada web

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         </div>
       </section>
 
+      <!-- product page -->
       <section id="product-page">
         <div class="product-title-container">
           <h1>Our new exclusive collections</h1>
@@ -93,6 +94,7 @@
         </div>
       </section>
 
+      <!-- product gallery -->
       <section id="product-gallery">
         <h2>Inspiring interiors crafted with passion</h2>
         <div class="product-image-container">
@@ -123,15 +125,24 @@
         </div>
       </section>
 
+      <!-- promotion page -->
       <section id="promotion-page">
-        <img src="https://images.unsplash.com/photo-1586023492125-27b2c045efd7?q=80&w=1916&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="product-image">
+        <img
+          src="https://images.unsplash.com/photo-1586023492125-27b2c045efd7?q=80&w=1916&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt="product-image"
+        />
 
         <div class="promotion-description">
           <h2>New Experience is going to unclock</h2>
-          <p>Indulge in comfort and style with our range of plush furniture and cozy accents</p>
+          <p>
+            Indulge in comfort and style with our range of plush furniture and
+            cozy accents
+          </p>
           <button class="btn-shop-now">Shop Now</button>
         </div>
       </section>
     </main>
+
+    <script src="index.js"></script>
   </body>
 </html>
