--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <!-- feathe icons -->
+    <script src="https://unpkg.com/feather-icons"></script>
+
     <link rel="stylesheet" href="style.css" />
     <title>Landing Page</title>
   </head>
@@ -67,7 +70,6 @@
           <button class="rounded-button">Chair</button>
           <button class="rounded-button">Bed</button>
           <button class="rounded-button">Kitchen</button>
-          <button class="rounded-button">Shelves</button>
         </div>
         <div class="product-container">
           <div class="product-card">
@@ -141,7 +143,34 @@
           <button class="btn-shop-now">Shop Now</button>
         </div>
       </section>
+
+      <!-- footer start -->
+      <footer>
+        <div class="socials">
+          <a href="#"><i data-feather="instagram"></i></a>
+          <a href="#"><i data-feather="twitter"></i></a>
+          <a href="#"><i data-feather="facebook"></i></a>
+        </div>
+
+        <div class="links">
+          <a href="#home">Home</a>
+          <a href="#about">Tentang Kami</a>
+          <a href="#menu">Menu</a>
+          <a href="#contact">Kontak</a>
+        </div>
+
+        <div class="credit">
+          <p>Created by <a href="">Sahrul</a>. | &copy; 2024.</p>
+        </div>
+      </footer>
+      <!-- footer end -->
+
+      <!-- feather icon -->
     </main>
+
+    <script>
+      feather.replace();
+    </script>
 
     <script src="index.js"></script>
   </body>
