--- a/index.html
+++ b/index.html
@@ -153,14 +153,13 @@
         </div>
 
         <div class="links">
-          <a href="#home">Home</a>
-          <a href="#about">Tentang Kami</a>
-          <a href="#menu">Menu</a>
-          <a href="#contact">Kontak</a>
+          <a href="#main-page">Home</a>
+          <a href="#product-page">Product Page</a>
+          <a href="#product-gallery">Product Gallery</a>
         </div>
 
         <div class="credit">
-          <p>Created by <a href="">Sahrul</a>. | &copy; 2024.</p>
+          <p>Created by <a href="">Sahrul</a>. | &copy; 2025.</p>
         </div>
       </footer>
       <!-- footer end -->
